<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/lagoazul"


        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7D000000"
        android:contentDescription="@string/filtro"
        />

    <TextView
        android:id="@+id/titulo_login"
        style="@style/etiquetas"
        android:text="@string/mis_tareas"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"


        />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_below="@id/titulo_login"
        android:text="@string/it_edix"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/subtitulo"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/linear"
        android:layout_alignParentStart="true"
        android:text="@string/login"
        android:textSize="30sp"
        app:cornerRadius="25dp"
        app:icon="@mipmap/login24"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/frase"
        android:layout_below="@id/boton"
        style="@style/etiquetas"
        android:layout_marginTop="16dp"
        android:text="@string/crea_una_cuenta"
        android:textSize="20sp"
        android:onClick="registro"
        />



</RelativeLayout>