<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:background="@color/azul_contraste">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle=""

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuarioReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuarioReg"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contraReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/crearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        app:rippleColor="@color/azul_contraste"
        app:icon="@mipmap/usuario"
        app:iconTint="@color/azul"
        app:iconSize="35dp"
        app:iconTintMode="screen"
        android:onClick="crearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelarReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textColor="@color/azul"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cornerRadius="25dp"
        android:textSize="30sp"
        app:icon="@mipmap/back"
        app:iconTint="@color/azul"
        app:iconSize="35dp"
        app:strokeColor="@color/azul"
        app:strokeWidth="4dp"
        app:rippleColor="@color/azul_contraste"
        android:onClick="cancelar"

        app:layout_constraintTop_toBottomOf="@+id/crearCuenta">

    </com.google.android.material.button.MaterialButton>





</androidx.constraintlayout.widget.ConstraintLayout>